--- a/exo14.html
+++ b/exo14.html
@@ -24,9 +24,12 @@
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
     // and we want to make a copy of it.
+    const team = players;
+
+    console.log(players, team);
 
     // You might think we can just do something like this:
-
+    // team[3] = "Lux"
     // however what happens when we update that array?
 
     // now here is the problem!
@@ -36,13 +39,19 @@
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
     // So, how do we fix this? We take a copy instead!
+    const team2 = players.slice();
+
 
     // one way
 
     // or create a new array and concat the old one in
-
+    const team3 = [].concat(players);
     // or use the new ES6 Spread
+    const team4 = [...players];
+    team4[3] = "heeeee yoooo";
+    console.log(team4);
 
+    const tema5 = Array.from(players);
     // now when we update it, the original one isn't changed
 
     // The same thing goes for objects, let's say we have a person object
@@ -56,10 +65,27 @@
     // and think we make a copy:
 
     // how do we take a copy instead?
-
+    const cap2 = Object.assign({}, person, { number: 99, age: 12});
+    console.lo(cap2);
     // We will hopefully soon see the object ...spread
-
+    // const cap3 = {...person};
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+    const wes = {
+      name: 'Wes',
+      age: 100,
+      social: {
+        twitte: '@weshoe',
+        facebook: "wes.developer"
+      }
+    }
+    console.clear();
+    console.log(wes);
+
+
+    const dev = Object.assign({}, wes);
+
+    const dev2 = JSON.parse(JSON.stringify(wes));
+
 
   </script>
 
