--- a/exo25.html
+++ b/exo25.html
@@ -46,6 +46,24 @@
 
   <button></button>
   <script>
+    const divs = document.querySelectorAll('div');
+    const button = document.querySelector('button');
+
+
+    function logText(e) {
+      console.log(this.classList.value);
+    }
+
+    divs.forEach(div => div.addEventListener('click, logText', {
+      capture: flase,
+      once:true
+    }));
+
+    button.addEventListener('click', () => {
+      console.log('Click!!!!')
+    }, {
+      once: true
+    });
 
   </script>
 </body>
