--- a/exo25.html
+++ b/exo25.html
@@ -55,7 +55,7 @@
     }
 
     divs.forEach(div => div.addEventListener('click, logText', {
-      capture: flase,
+      capture: false,
       once:true
     }));
 
